--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ crashlytics-build.properties
 
 
 git pull --ff-only
+git config pull.rebase false  # merge
+git config pull.rebase true   # rebase
+git config pull.ff only       # fast-forward only
